--- a/railway-simulation-system/package.json
+++ b/railway-simulation-system/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.19",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-papaparse": "^4.4.0"
   },
